--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+    "lodash.template": "^4.5.0"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
