--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "extends": "react-app"
   },
   "resolutions": {
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "handlebars": "^4.3.0",
+    "eslint-utils": "^1.4.1"
   },
   "browserslist": {
     "production": [
